Project score_it {
  database_type: 'PostGreSQL'
  Note: '''
    # Scoreit Team Database
  '''
}

Table users as U {
    id uuid [pk, default: `uuid_generate_v4()`, not null]
    username varchar(100) [not null]
    first_name varchar(100) [not null]
    last_name varchar(100) [not null]
    email varchar(100) [unique, not null]
    is_email_verified boolean [not null, default: false]
    hashed_password varchar [not null]
    password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
    created_at timestamptz [not null, default: `now()`]
    updated_at timestamptz [not null, default: `now()`]
    Indexes {
      (username) [unique]
    }
}

Table user_roles as R {
  id uuid [pk, default: `uuid_generate_v4()`, not null]
  name varchar [not null]
  user_id uuid [ref: > U.id, not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  Indexes {
    (name,user_id) [unique]
  }
}

Table verify_emails {
  id uuid [pk, default: `uuid_generate_v4()`, not null]
  user_id varchar(100) [ref: > U.id, not null]
  email varchar(100) [not null]
  secret_code varchar [not null]
  is_used boolean [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  expired_at timestamptz [not null, default: `now() + interval '15 minutes'`]
  Indexes {
    (secret_code) [unique]
  }
}

Table teams as T {
    id uuid [pk, default: `uuid_generate_v4()`, not null]
    name varchar(100) [not null]
    created_at timestamptz [not null, default: `now()`]
    updated_at timestamptz [not null, default: `now()`]
    Indexes {
      (name) [unique]
    }
}

Table team_members as UT {
    id uuid [pk, default: `uuid_generate_v4()`, not null]
    number bigint [not null]
    primary_position varchar(100) [not null]
    user_id uuid [ref: > U.id, not null]
    team_id uuid [ref: > T.id, not null]
    created_at timestamptz [not null, default: `now()`]
    updated_at timestamptz [not null, default: `now()`]
}

Table sessions {
  id uuid [pk]
  user_id uuid [ref: > U.id, not null]
  refresh_token varchar(700) [not null]
  user_agent varchar(100) [not null]
  client_ip varchar(100) [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz
  created_at timestamptz [not null, default: `now()`]
}

Table game as G {
  id uuid [pk, default: `uuid_generate_v4()`, not null]
  home_team_id uuid [ref: > T.id, not null]
  away_team_id uuid [ref: > T.id, not null]
  home_score bigint [not null]
  away_score bigint [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table inning as I {
  id uuid [pk, default: `uuid_generate_v4()`, not null]
  game_id uuid [ref: > G.id]
  number bigint [not null]
  home_runs bigint [not null]
  home_hits bigint [not null]
  home_errors bigint [not null]
  home_last_bat uuid [ref: > GP.id, not null]
  away_runs bigint [not null]
  away_hits bigint [not null]
  away_errors bigint [not null]
  away_last_bat uuid [ref: > GP.id, not null]
}

Table atbat as AB {
  id uuid [pk, default: `uuid_generate_v4()`, not null]
  inning_id uuid [ref: > I.id]
  batter_id uuid [ref: > GP.id]
  pitcher_id uuid [ref: > GP.id]
  balls bigint [not null]
  strikes bigint [not null]
  init_bases bigint [not null]
  total_bases bigint [not null]
  out boolean [not null]
}

Table game_participant as GP {
  id uuid [pk, default: `uuid_generate_v4()`, not null]
  game_id uuid [ref: > G.id, not null]
  player_id uuid [ref: > U.id, not null]
  team_id uuid [ref: > T.id, not null]
  bat_position bigint [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table game_stat as GS {
  id uuid [pk, default: `uuid_generate_v4()`, not null]
  atbat_id uuid [ref: > AB.id]
  type varchar
}
